# tray4hermes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  hermes-tray.desktop  hermes_tray.py  pyproject.toml  run.sh
docs/: README.cs.md
docs/i18n/: cs.md  en.md
scripts/: dev.sh  i18n_build.py  i18n_compile.sh  i18n_lint.py  versioning.py
src/tray4hermes/: __init__.py  __main__.py  app.py  i18n.py  icons.py  lock.py  logs_view.py  paths.py  state.py  tray_settings.py
src/tray4hermes/_locales/: tray4hermes.pot
src/tray4hermes/_locales/cs/LC_MESSAGES/: tray4hermes.mo  tray4hermes.po
tests/: conftest.py  test_app.py  test_editor_picker.py  test_i18n_build.py  test_i18n_parity.py  test_i18n_runtime.py  test_lock.py  test_readme_parity.py  test_settings_dialog.py  test_state.py  test_tray_settings.py  test_versioning.py
